Add XLIFF 1.2 multilingual support with 31 language translations
Updated XLIFF files to version 1.2 specification:
- locallang_mod.xlf: Backend module translations (112 units)
- locallang_reports.xlf: Reports module translations (2 units)

Added 62 translation files for 31 languages:
- af (Afrikaans), ar (Arabic), ca (Catalan)
- cs (Czech), da (Danish), de (German)
- el (Greek), es (Spanish), fi (Finnish)
- fr (French), he (Hebrew), hi (Hindi)
- hu (Hungarian), id (Indonesian), it (Italian)
- ja (Japanese), ko (Korean), nl (Dutch)
- no (Norwegian), pl (Polish), pt (Portuguese)
- ro (Romanian), ru (Russian), sr (Serbian)
- sv (Swedish), sw (Swahili), th (Thai)
- tr (Turkish), uk (Ukrainian), vi (Vietnamese)
- zh (Chinese)

Total: 64 XLIFF 1.2 files (2 base + 62 translations)
Translation units: 7,068 total across all languages

Following t3x-nr-textdb language structure for consistency

--- a/Resources/Private/Language/da.locallang_reports.xlf
+++ b/Resources/Private/Language/da.locallang_reports.xlf
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-    <file source-language="en" datatype="plaintext" original="EXT:temporal_cache/Resources/Private/Language/locallang_reports.xlf" date="2024-01-01T00:00:00Z" product-name="temporal_cache">
+    <file source-language="en" target-language="da" datatype="plaintext" original="EXT:temporal_cache/Resources/Private/Language/locallang_reports.xlf" date="2024-01-01T00:00:00Z" product-name="temporal_cache">
         <header/>
         <body>
             <trans-unit id="status.title" resname="status.title">
                 <source>Temporal Cache</source>
+                <target>Temporal Cache</target>
             </trans-unit>
             <trans-unit id="status.description" resname="status.description">
                 <source>Status report for Temporal Cache extension - cache invalidation for time-based content</source>
+                <target>Status report for Temporal Cache extension - cache invalidation for time-based content</target>
             </trans-unit>
         </body>
     </file>
